# RDKx5

./: .gitignore  README.md  README_cn.md
config/voice/: voice_persona.json
docs/: architecture.md
scripts/: setup_env.sh
src/app_bridge/robopilot_app_bridge/config/: 10-robopilot-xhci-noise.conf  99-robopilot-journal.conf  robopilot_app.yaml
src/app_bridge/robopilot_app_bridge/scripts/: capture_calib_images.py  capture_calib_images.sh  check_cloud_bridge.sh  disable_usb_autosuspend.sh  install_host_log_limits.sh  start_robopilot_app.sh
src/arm_control/: arm_node.py
src/object_tracker/object_tracker/: package.xml
src/object_tracker/object_tracker/launch/: object_tracker.launch.py
src/object_tracker/object_tracker/object_tracker/: tracker_node.py
src/task_orchestrator/: voice_fetch_orchestrator.py
src/vision_to_3d/camera_mux/: package.xml  setup.py
src/vision_to_3d/camera_mux/launch/: usb_camera.launch.py
src/vision_to_3d/vision_tf_bridge/: setup.cfg  setup.py
src/vision_to_3d/vision_tf_bridge/launch/: fetch_task_bridge.launch.py  patrol_memory_bridge.launch.py  selected_detection_bridge.launch.py
src/vision_to_3d/vision_tf_bridge/vision_ros1_tf_bridge/: patrol_memory_bridge_node.py  selected_detection_bridge_node.py
src/vision_to_3d/vision_to_3d_local/: package.xml  setup.py
src/vision_to_3d/vision_to_3d_local/vision_to_3d_local/: vision_to_3d_local_node.py
src/vlm_target_selector/vlm_target_selector/: setup.cfg  setup.py
src/vlm_target_selector/vlm_target_selector/launch/: fetch_task_support.launch.py  lost_reselector.launch.py  memory_query.launch.py  patrol_memory.launch.py  task_understanding.launch.py  vlm_target_selector.launch.py
src/vlm_target_selector/vlm_target_selector/vlm_target_selector/: bailian_vlm_client.py  depth_to_map_projector.py  memory_manager.py  memory_query_node.py  memory_target_select_adapter.py  numbered_candidate_drawer.py  target_confirm_node.py
src/vlm_target_selector/yolo_detector/: package.xml  setup.py
src/vlm_target_selector/yolo_detector/yolo_detector/: yolo_engine.py
src/voice_interaction/asr_bridge/: package.xml  setup.cfg
src/voice_interaction/asr_bridge/asr_ros1_bridge/: bridge_node.py  tts_host_node.py  tts_qwen.py
src/voice_interaction/doa_bridge/: package.xml  setup.py
src/voice_interaction/respeaker_xvf3800_ros2/: setup.cfg  setup.py
src/voice_interaction/respeaker_xvf3800_ros2/config/: wake_sensitive.yaml
tools/debug/doa_visualizer/: package.xml  setup.cfg  setup.py
xiaogua-open-source/: README_cn.md
xiaogua-open-source/config/navigation/: patrol_points.json
xiaogua-open-source/docs/: quick_start.md  technical_report.md
xiaogua-open-source/scripts/: start_voice_fetch.sh
xiaogua-open-source/src/app_bridge/robopilot_app_bridge/: package.xml  setup.cfg  setup.py
xiaogua-open-source/src/app_bridge/robopilot_app_bridge/config/: mqtt_bridge.env.example
xiaogua-open-source/src/app_bridge/robopilot_app_bridge/launch/: robopilot_app.launch.py
xiaogua-open-source/src/app_bridge/robopilot_app_bridge/scripts/: reenumerate_xvf3800.sh
xiaogua-open-source/src/app_bridge/robopilot_app_bridge/src/robopilot_app_bridge/: bridge_node.py  common.py  mjpeg_server.py  robot_cloud_bridge.py
xiaogua-open-source/src/arm_control/: auto_aim.py
xiaogua-open-source/src/task_orchestrator/: voice_person_follow_flow.py
xiaogua-open-source/src/vlm_target_selector/vlm_target_selector/: package.xml
xiaogua-open-source/src/vlm_target_selector/vlm_target_selector/launch/: memory_target_select_adapter.launch.py  target_confirm.launch.py
xiaogua-open-source/src/vlm_target_selector/vlm_target_selector/vlm_target_selector/: direct_bailian_client.py  http_timing.py  image_mjpeg_server_node.py  lost_reselector_node.py  patrol_scan_adapter.py  selector_node.py  semantic_marker_publisher.py  task_understanding_node.py  vlm_number_selector.py
xiaogua-open-source/src/voice_interaction/respeaker_xvf3800_ros2/: package.xml
xiaogua-open-source/src/voice_interaction/respeaker_xvf3800_ros2/config/: default.yaml
xiaogua-open-source/src/voice_interaction/respeaker_xvf3800_ros2/launch/: respeaker_xvf3800.launch.py  respeaker_xvf3800_wake.launch.py
xiaogua-open-source/src/voice_interaction/respeaker_xvf3800_ros2/resource/: respeaker_xvf3800_ros2
xiaogua-open-source/src/voice_interaction/respeaker_xvf3800_ros2/src/respeaker_xvf3800_ros2/: __init__.py  audio.py  backend.py  command_parser.py  commands.py  node.py
xiaogua-open-source/src/voice_interaction/respeaker_xvf3800_ros2/src/respeaker_xvf3800_ros2.egg-info/: PKG-INFO  entry_points.txt
(+43 files in other folders)
