<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vlm_target_selector</name>
  <version>0.1.0</version>
  <description>ROS2 node that asks a VLM to select one YOLO candidate by numbered bounding box.</description>
  <maintainer email="dev@todo.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ai_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>openai</exec_depend>
  <exec_depend>vlm_target_msgs</exec_depend>
  <exec_depend>yolo_detector</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
