<?xml version="1.0"?>
<package format="3">
  <name>respeaker_xvf3800_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 driver and control wrapper for Seeed reSpeaker XVF3800.</description>
  <maintainer email="root@localhost">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interfaces</depend>
  <depend>audio_msg</depend>
  <exec_depend>openai</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
